--- a/index.html
+++ b/index.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Chute code test</title>
-</head>
-<body>
-<div class="container">
-    <h1>Chute image gallery</h1>
-    <form class="form-inline">
-        <input type="text" class="form-control" placeholder="Type album ID">
-        <button class="btn btn-primary">Show album</button>
-    </form>
-    <hr/>
-    <div class="image-gallery">
-    </div>
-</div>
-<script type="text/template" id="image-list-template">
-<% _.each(images, function(image)){ %>
-    <div class="image">
-        <img src="<%= image.get('url') %>"/>
-    </div>
-<% }); %>
-</script>
-
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
-<script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
-<script type="text/javascript" src="masonry.pkgd.min.js"></script>
-<script>
-    $.ajaxPrefilter(function(options,originalOptions,jqXHR) {
-        options.url = 'http://api.getchute.com/v2/album' + options.url;
-    });
-    var Images = Backbone.Collection.extend({
-        url:'/aus6kwrg'
-    });
-
-    var ImageList = Backbone.View.extend({
-        el:'.image-gallery',
-        render:function(){
-            var that = this;
-            var images = new Images();
-            images.fetch({
-                success: function(images){
-                    var template = _.template($('#image-list-template').html(),{images: images.models});
-                    that.$el.html(template);
-                }
-            })
-        }
-    });
-
-    var Router = Backbone.Router.extend({
-        routes: {'':'home'}
-    });
-
-    var imageList = new ImageList();
-
-    var router = new Router();
-    router.on('route:home',function(){
-       imageList.render();
-    });
-
-
-
-</script>
-</body>
-</html>
+This is my homepage.
